2003-10-23  Andreas Kupries  <andreask@activestate.com>

	* snit.man: Updated from Will's html doc's.

2003-10-23  Will Duquette  <will@cordelia.local.>

	* snit.html: Added documentation for the new "hulltype",
	  	     "widgetclass", and "install" commands.  Updated the
	  	     documentation for "installhull" to show the new
	  	     "installhull using" syntax.  Updated the
	  	     documentation for "option" and "delegate option" to
	  	     show how to specify the resource and class names for
	  	     options.  Added a section on the interaction between
	  	     Snit and the Tk option database.

2003-10-21  Will Duquette  <will@wjduquette.com>

	* snit.tcl:  Add the "hulltype" command.  This allows the snit::widget 
	* snit.test: author to choose whether the hull should be a frame
	  	     or a toplevel.  Tests have been updated as usual.

2003-10-20  Will Duquette  <will@wjduquette.com>

	* snit.tcl:  The new "install" command can now be used to install
	* snit.test: components for snit::types as well.  It doesn't add
		     any value, since there's no option database, but at
	             least the syntax will be the same.

		     "install" now initializes the component properly
		     from the option database when "option *" has been
		     delegated to it.

		     Tests have been updated as usual.

2003-10-19  Will Duquette  <will@wjduquette.com>

	* snit.tcl:  During normal widget creation, the default values
	* snit.test: for a widget's local options are overridden by
	  	     values from the option database.

		     Array %TYPE%::Snit_compoptions now lists delegated 
		     option names for each component.

		     Added a new command, "install", for use in widget
		     and widgetadaptor constructors.  Install creates a
		     widget, assigning it to a component; it also queries
		     the option database for any option values that are
		     delegated to this component.

		     Modified installhull, adding a new form that queries