@@ -1,3 +1,10 @@
+2003-10-25  Will Duquette  <will@cordelia.local.>
+
+	* snit.tcl:  Added the "except" clause for "delegate method *" and
+	* snit.test: "delegate option *".  This allows the user to
+	  	     explicitly exclude certain methods and options.
+		     Added appropriate tests.
+
 2003-10-23  Andreas Kupries  <andreask@activestate.com>
 
 	* snit.man: Updated from Will's html doc's.
